epserde/tests/fail/drop_encase_deref.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_encase_deref.rs:14:10
   |
12 |     let mem_case = MemCase::encase(v);
   |         -------- binding `mem_case` declared here
13 |     let d = mem_case.deref();
   |             -------- borrow of `mem_case` occurs here
14 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
15 |     let _d = d;
   |              - borrow later used here
